fixed `aside` alignment

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ ul li::before {
 }
 aside {
   justify-content: space-between;
+  align-items: center;
   flex-direction: row;
 }
 
